--- a/Cutoff rules 0.8.ipynb
+++ b/Cutoff rules 0.8.ipynb
@@ -934,7 +934,7 @@
     "\n",
     "ax.set_xlabel('400:800 ratio (unitless)',fontsize=16)\n",
     "ax.set_ylabel('Ionization rate (arb units, logscale)',fontsize=16,labelpad=20)\n",
-    "ax.set_title('Ionization rates with constant total intensity (approximates as I^8)')\n",
+    "ax.set_title('Ionization rates with constant total intensity (approximated as I^8)')\n",
     "# ax.set_ylim(0,2.5)\n",
     "\n",
     "leg = ax.legend(); leg.draw_frame(False)"
